update getting started for flutter and web

--- a/app/views/docs/getting-started-for-flutter.phtml
+++ b/app/views/docs/getting-started-for-flutter.phtml
@@ -173,7 +173,7 @@ final realtime = Realtime(client);
 final subscription = realtime.subscribe(['files']);
 
 subscription.stream.listen((response) {
-    if(response.event == 'storage.files.create') {
+    if(response.events.contains('buckets.*.files.*.create') {
         // Log when a new file is uploaded
         print(response.payload);
     }
@@ -209,7 +209,7 @@ final realtime = Realtime(client);
 final subscription = realtime.subscribe(['files']);
 
 subscription.stream.listen((response) {
-    if(response.event == 'storage.files.create') {
+    if(response.events.contains('buckets.*.files.*.create')) {
         // Log when a new file is uploaded
         print(response.payload);
     }
