--- a/app/views/docs/realtime.phtml
+++ b/app/views/docs/realtime.phtml
@@ -111,7 +111,7 @@ let subscription = realtime.subscribe(channels: ["files"]) { message in
 
 <p>To subscribe to updates from different resources, you need to specify one or more channels. The <a href="/docs/realtime#channels">channels</a> offer a wide and powerful selection that will allow you to listen to all possible resources. This allows you to receive updates not only from the database, but from all the services that Appwrite offers.</p>
 
-<p>If you subscribe to the a channel, you will receive callbacks for a variety of events related to the channel. The <b>events</b> attribute in the callback can be used to filter and respond to specific events in a channel.</p>
+<p>If you subscribe to a channel, you will receive callbacks for a variety of events related to the channel. The <b>events</b> attribute in the callback can be used to filter and respond to specific events in a channel.</p>
 
 <p>All possible events can be found <a href="/docs/webhooks#events">here</a>.</p>
 
