--- a/app/views/docs/realtime.phtml
+++ b/app/views/docs/realtime.phtml
@@ -100,7 +100,7 @@ let realtime = Realtime(client: client)
 
 // Subscribe to files channel
 let subscription = realtime.subscribe(channels: ["files"]) { message in
-    if(message.events.contains("buckets.*.files.*.create")) {
+    if(message.events!.contains("buckets.*.files.*.create")) {
         // Log when a new file is uploaded
         print(String(describing: message.payload))
     }
