--- a/app/views/docs/functions.phtml
+++ b/app/views/docs/functions.phtml
@@ -322,7 +322,7 @@ Future &lt;void&gt; start(final req, final res) async {
     --functionId=6012cc93d5a7b \
     --activate=true \
     --entrypoint="index.js" \
-    --code="/myrepo/myfunction"</code></pre>
+    --code="."</code></pre>
         </div>
     </li>
     <li>
@@ -333,7 +333,7 @@ Future &lt;void&gt; start(final req, final res) async {
     --functionId=6012cc93d5a7b ^
     --activate=true ^
     --entrypoint="index.js" ^
-    --code="/myrepo/myfunction"</code></pre>
+    --code="."</code></pre>
         </div>
     </li>
     <li>
@@ -344,7 +344,7 @@ Future &lt;void&gt; start(final req, final res) async {
     --functionId=6012cc93d5a7b ,
     --activate=true ,
     --entrypoint="index.js" ,
-    --code="/myrepo/myfunction"</code></pre>
+    --code="."</code></pre>
         </div>
     </li>
 </ul>
@@ -517,6 +517,8 @@ class MainActivity : AppCompatActivity() {
 <p>Appwrite allows your project's end-users to execute Cloud Functions using client API or your client SDK. Execution is permitted to any user who has been granted the "execute" permission in your Cloud Functions settings page. The execution permission can accept any of the typical Appwrite <a href="/docs/permissions">permission types</a>.</p>
 
 <p>When triggering a Cloud Function execution from the client, your users will be limited to a specific amount of execution per minute to make sure your Appwrite server is not being abused. The default limit is 60 calls per 1 minute. You can edit this limit using the server <a href="/docs/environment-variables#functions">environment variables</a>.</p>
+
+<p>The response size of a Cloud Function is limited to 1MB. Large files or data volume should be handled using Appwrite's Database or Storage service.</p>
 
 <h2><a href="/docs/functions#ignoreFiles" id="ignoreFiles">Ignore Files</a></h2>
 
