--- a/app/views/docs/functions.phtml
+++ b/app/views/docs/functions.phtml
@@ -257,7 +257,7 @@ Future &lt;void&gt; start(final req, final res) async {
         <div class="ide margin-top-small" data-lang="csharp" data-lang-label="C#">
             <pre class="line-numbers"><code class="prism language-csharp" data-prism>public async Task<RuntimeResponse> Main(RuntimeRequest req, RuntimeResponse res)
 {
-  var payload = (string.IsNullOrEmpty(req.Payload) || req.Payload.Equals("{}"))
+  var payload = (string.IsNullOrEmpty(req.Payload))
                 ? "No payload provided. Add custom data when executing function."
                 : req.Payload; 
 
