Fix grammar error in Installing Dependencies note

--- a/app/views/docs/functions.phtml
+++ b/app/views/docs/functions.phtml
@@ -95,7 +95,7 @@ return function ($req, $res) {
 };</code></pre>
         </div>
         <p><b>Installing Dependencies</b></p>
-        <p>Include a <b>composer.json</b> file in your function, make sure to require autoload.php from vendor folder, and Appwrite will handle the rest!. The best practice is to make sure <b>vendor</b> directory is <b>not</b> part of your tarball. </p>
+        <p>Include a <b>composer.json</b> file along with your function, make sure to require autoload.php from vendor folder, and Appwrite will handle the rest!. The best practice is to make sure <b>vendor</b> directory is <b>not</b> part of your tarball. </p>
     </div>
     </li>
     <li>
@@ -125,7 +125,7 @@ def main(req, res):
   })</code></pre>
         </div>
         <p><b>Installing Dependencies</b></p>
-        <p>Include a <b>requirements.txt</b> file in your function, Appwrite will handle the rest!</p>
+        <p>Include a <b>requirements.txt</b> file with your function, Appwrite will handle the rest!</p>
         </div>
     </li>
     <li>
@@ -155,7 +155,7 @@ def main(req, res):
 end</code></pre>
         </div>
         <p><b>Installing Dependencies</b></p>
-        <p>Include a <b>Gemfile</b> in your function, Appwrite handles the rest!</p>
+        <p>Include a <b>Gemfile</b> with your function, Appwrite handles the rest!</p>
         </div>
     </li>
     <li>
@@ -280,7 +280,7 @@ Future &lt;void&gt; start(final req, final res) async {
 }</code></pre>
         </div>
         <p><b>Installing Dependencies</b></p>
-        <p>Include a <b>Function.csproj</b> file in your function, Appwrite handles the rest!</p>
+        <p>Include a <b>Function.csproj</b> file with your function, Appwrite handles the rest!</p>
         </div>
     </li>
     <li>
@@ -310,7 +310,7 @@ fun main(req: RuntimeRequest, res: RuntimeResponse): RuntimeResponse {
 }</code></pre>
         </div>
         <p><b>Installing Dependencies</b></p>
-        <p>Include a <b>deps.gradle</b> file in your function, Appwrite handles the rest!</p>
+        <p>Include a <b>deps.gradle</b> file with your function, Appwrite handles the rest!</p>
         </div>
     </li>
     <li>
@@ -347,7 +347,7 @@ public RuntimeResponse main(RuntimeRequest req, RuntimeResponse res) throws Exce
 }</code></pre>
         </div>
         <p><b>Installing Dependencies</b></p>
-        <p>Include a <b>deps.gradle</b> file in your function, Appwrite handles the rest!</p>
+        <p>Include a <b>deps.gradle</b> file with your function, Appwrite handles the rest!</p>
         </div>
     </li>
 </ul>
