Fix include statements

--- a/app/views/docs/functions.phtml
+++ b/app/views/docs/functions.phtml
@@ -354,8 +354,8 @@ public RuntimeResponse main(RuntimeRequest req, RuntimeResponse res) throws Exce
         <h3>C++</h3>
         <div>
         <div class="ide margin-top-small" data-lang="cpp" data-lang-label="C++">
-            <pre class="line-numbers"><code class="prism language-cpp" data-prism>#include <iostream>
-#include <string>
+            <pre class="line-numbers"><code class="prism language-cpp" data-prism>#include &lt;iostream&gt;
+#include &lt;string&gt;
 
 static RuntimeResponse &main(const RuntimeRequest &req, RuntimeResponse &res) {
 
