--- a/app/views/docs/functions.phtml
+++ b/app/views/docs/functions.phtml
@@ -354,7 +354,7 @@ public RuntimeResponse main(RuntimeRequest req, RuntimeResponse res) throws Exce
         <h3>C++</h3>
         <div>
         <div class="ide margin-top-small" data-lang="cpp" data-lang-label="C++">
-            <pre class="line-numbers"><code class="prism language-cpp" data-prism>#include &lt;iostream&gt;
+            <pre class="line-numbers"><code class="prism language-csharp" data-prism>#include &lt;iostream&gt;
 #include &lt;string&gt;
 
 static RuntimeResponse &main(const RuntimeRequest &req, RuntimeResponse &res) {
