updates installation doc to mention dependency on v2

--- a/app/views/docs/installation.phtml
+++ b/app/views/docs/installation.phtml
@@ -4,6 +4,8 @@
 
 <p>Appwrite was designed to run well on both small and large deployment. The minimum requirements to run Appwrite is as little as <b>1 CPU core</b> and <b>2GB of RAM</b>, and an operating system that supports Docker.</p>
 
+<p>As of version 0.14, Appwrite requires <a href="https://www.docker.com/blog/announcing-compose-v2-general-availability/" target="_blank" rel="noopener">Docker Compose Version 2</a>. To install Appwrite, make sure your Docker installation is updated to support Composer V2.</p>
+
 <div class="notice margin-bottom">
     <h3>Upgrading From Older Versions</h3>
     <p>If you are migrating from an older version of Appwrite, you need to follow the <a href="/docs/upgrade">migration instructions</a></p>
