update docker compose commands

--- a/app/views/docs/debugging.phtml
+++ b/app/views/docs/debugging.phtml
@@ -53,5 +53,5 @@ environment:
 <p>After you completed the change in the docker-compose.yml file, save it and run the following command to restart Appwrite with your new settings:</p>
 
 <div class="ide margin-bottom" data-lang="bash" data-lang-label="Bash">
-    <pre class="line-numbers"><code class="prism language-bash" data-prism>docker-compose up -d</code></pre>
+    <pre class="line-numbers"><code class="prism language-bash" data-prism>docker compose up -d</code></pre>
 </div>
