--- a/app/views/docs/environment-variables.phtml
+++ b/app/views/docs/environment-variables.phtml
@@ -12,7 +12,7 @@ $markdown->setSafeMode(true);
 <p>After editing your docker-compose.yml or .env files, you will need to restart your Appwrite stack by running the following compose command in your terminal:</p>
 
 <div class="ide margin-bottom" data-lang="bash" data-lang-label="Bash">
-    <pre class="line-numbers"><code class="prism language-bash" data-prism>docker-compose up -d</code></pre>
+    <pre class="line-numbers"><code class="prism language-bash" data-prism>docker compose up -d</code></pre>
 </div>
 
 <p><b>All Options:</b></p>
