--- a/app/views/docs/certificates.phtml
+++ b/app/views/docs/certificates.phtml
@@ -12,7 +12,7 @@
 <p>If you're still struggling with your certificates, check the Appwrite certificates worker log. You can do that with the following command:</p>
 
 <div class="ide margin-bottom" data-lang="bash" data-lang-label="Bash">
-    <pre class="line-numbers"><code class="prism language-bash" data-prism>docker-compose logs appwrite-worker-certificates</code></pre>
+    <pre class="line-numbers"><code class="prism language-bash" data-prism>docker compose logs appwrite-worker-certificates</code></pre>
 </div>
 
 <h2><a href="/docs/certificates#generationCycle" id="generationCycle">Generation Cycle</a></h2>
@@ -28,13 +28,13 @@
 <p>Since Appwrite generates and renews certificates automatically, a manual generation is seldom required. A manual generation can be useful when you hit the API limit and don't want to wait for the next maintenance cycle to renew the certificate. Use the following command to generate a certificate for your main domain:</p>
 
 <div class="ide margin-bottom" data-lang="bash" data-lang-label="Bash">
-    <pre class="line-numbers"><code class="prism language-bash" data-prism>docker-compose exec appwrite ssl</code></pre>
+    <pre class="line-numbers"><code class="prism language-bash" data-prism>docker compose exec appwrite ssl</code></pre>
 </div>
 
 <p>If you want to generate a certificate for a specific domain, pass it as a parameter into the command:</p>
 
 <div class="ide margin-bottom" data-lang="bash" data-lang-label="Bash">
-    <pre class="line-numbers"><code class="prism language-bash" data-prism>docker-compose exec appwrite ssl domain="api.myapp.com"</code></pre>
+    <pre class="line-numbers"><code class="prism language-bash" data-prism>docker compose exec appwrite ssl domain="api.myapp.com"</code></pre>
 </div>
 
 <h2>Dev Environment and Localhosts</h2>
