--- a/app/views/docs/email-delivery.phtml
+++ b/app/views/docs/email-delivery.phtml
@@ -35,7 +35,7 @@ _APP_SMTP_PASSWORD=YOUR-SMTP-PASSWORD</code></pre>
 <p>Once you've updated your .env file, you need to restart your Appwrite stack using the following command from your terminal:</p>
 
 <div class="ide margin-bottom" data-lang="bash" data-lang-label="Bash">
-    <pre class="line-numbers"><code class="prism language-bash" data-prism>docker-compose up -d</code></pre>
+    <pre class="line-numbers"><code class="prism language-bash" data-prism>docker compose up -d</code></pre>
 </div>
 
 <h2><a href="/docs/email-delivery#debugging" id="debugging">Debugging</a></h2>
@@ -43,7 +43,7 @@ _APP_SMTP_PASSWORD=YOUR-SMTP-PASSWORD</code></pre>
 <p>If you are unable to send emails, there is most likely an issue with your integration. The first place to look for possible errors is the <b>Appwrite Emails Worker</b>. You can access the logs of this container using: 
 
 <div class="ide margin-bottom" data-lang="bash" data-lang-label="Bash">
-    <pre class="line-numbers"><code class="prism language-bash" data-prism>docker-compose logs -f appwrite-worker-mails</code></pre>
+    <pre class="line-numbers"><code class="prism language-bash" data-prism>docker compose logs -f appwrite-worker-mails</code></pre>
 </div>
 </p>
 
@@ -56,13 +56,13 @@ The next possible source of error is the configuration in your .env file. Make s
 <p>Another source of error could be that the environment variables have not been set in the appwrite container. You can check this using </p>
 
 <div class="ide margin-bottom" data-lang="bash" data-lang-label="Bash">
-    <pre class="line-numbers"><code class="prism language-bash" data-prism>docker-compose exec appwrite-worker-mails vars</code></pre>
+    <pre class="line-numbers"><code class="prism language-bash" data-prism>docker compose exec appwrite-worker-mails vars</code></pre>
 </div>
 
 <p>If this is the case, you can try rebuilding your appwrite stack using:</p>
 
 <div class="ide margin-bottom" data-lang="bash" data-lang-label="Bash">
-    <pre class="line-numbers"><code class="prism language-bash" data-prism>docker-compose up -d --build --force-recreate</code></pre>
+    <pre class="line-numbers"><code class="prism language-bash" data-prism>docker compose up -d --build --force-recreate</code></pre>
 </div>
 
 <p>Now you can head over to your Appwrite console, logout from your account and try to recover your password or send invites to other team members from your Appwrite console using your newly configured SMTP provider.</p>
