Add query to index

--- a/app/views/docs/index.phtml
+++ b/app/views/docs/index.phtml
@@ -85,6 +85,7 @@ $cols = [
 
                 <ul class="margin-bottom">
                     <li><a href="/docs/pagination">Pagination</a></li>
+                    <li><a href="/docs/query">Query</a></li>
                     <li><a href="/docs/custom-domains">Custom Domains</a></li>
                     <li><a href="/docs/permissions">Permissions</a></li>
                     <li><a href="/docs/error-codes">Error Codes</a></li>
